--- a/styles/styles.css
+++ b/styles/styles.css
@@ -44,6 +44,7 @@ html {
 }
 
 body {
+   min-width: 1020px;
    font-family: "PT Sans", sans-serif;
    font-size: 16px;
    line-height: 24px;
@@ -100,7 +101,7 @@ body {
 
 .navigation-link {
    display: block;
-   padding: 24px 19px;
+   padding: 24px 20px;
    font-family: "PT Sans Narrow", sans-serif;
    line-height: 22px;;
    font-weight: 700;
@@ -173,18 +174,14 @@ body {
 }
 
 .advantages-list {
-   display: flex;
-   justify-content: space-between;
+   display: grid;
+   gap: 30px 54.5px;
+   grid-template-columns: 277px 277px 277px;
    text-align: center;
    margin: 0;
    padding: 0;
    color: #FFFFFF;
    list-style-type: none;
-}
-
-/*Advantages Item */
-.advantages-item {
-   width: 277px;
 }
 
 /* Advantages Tiltle */
@@ -279,6 +276,7 @@ body {
    margin-bottom: 22px;
 }
 
+/* Decorative points between the service and the price */
 .services-item::before {
    flex-grow: 1;
    order: 2;
@@ -291,6 +289,7 @@ body {
 .services-price {
    color: #AF7842;
    order: 3;
+   word-spacing: 3px;
 }
 
 /* Button */
@@ -357,6 +356,9 @@ body {
 
 .navigation-link {
    font-family: "PT Sans Narrow", sans-serif;
+   display: flex;
+   gap: 5px;
+   align-items: center;
 }
 
 .navigation-link-login .navigation-icon {
@@ -366,20 +368,28 @@ body {
 }
 
 .navigation-icon {
+   fill: #DBDBDB;
+   width: 18px;
+   height: 18px;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    margin: auto;
-   fill: #DBDBDB;
 }
 
-/* проблема: не работает смена цвета в ховер и фокус */
+.shopping-basket-icon {
+   background-image: url("../images/main/shopping-basket-pale.png");
+   background-size: 16px 16px;
+   background-repeat: no-repeat;
+   width: 16px;
+   height: 16px;
+}
+
 .navigation-link:hover .navigation-icon {
    fill: #242424;
 }
 
-/* проблема: не работает смена цвета в ховер и фокус */
 .navigation-link:focus .navigation-icon {
    fill: #DBDBDB;
 }
@@ -391,7 +401,7 @@ body {
 
 .gallery-title {
    margin-top: 0;
-   margin-bottom: 28px;
+   margin-bottom: 20px;
    font-family: "PT Sans Narrow", sans-serif;
    font-size: 32px;
    line-height: 35px;
@@ -501,6 +511,11 @@ body {
    margin: 8px 0;
 }
 
+.phone-number {
+   font-style: normal;
+   color: #000000;
+}
+
 .contacts-schedule {
    margin: 8px 0;
    padding: 0;
@@ -509,15 +524,13 @@ body {
 
 .contacts-navigation {
    margin-top: 21px;
-   margin-bottom: 0;
-}
-
-.button + .button {
-   margin-left: 16px;
+   margin-right: 13px;
+   margin-bottom: 5px;
 }
 
 /* Subtitle */
 .contacts-subtitle {
+   font-family: "PT Sans Narrow", sans-serif;
    margin-top: 22px;
    margin-bottom: 8px;
    font-size: 20px;
@@ -548,6 +561,13 @@ body {
    line-height: 35px;
    font-weight: 700;
    text-transform: uppercase;
+}
+
+.appointment-info {
+   color: #595959;
+   font-size: 14px;
+   line-height: 20px;
+   margin-bottom: 22px;
 }
 
 .appointment-form {
@@ -617,10 +637,17 @@ body {
 }
 
 /* Range */
+.range {
+   max-width: 220px;
+   overflow: auto;
+   padding-top: 8px;
+}
+
 .range-scale {
    position: relative;
    height: 4px;
    margin-bottom: 16px;
+   margin-top: 16px;
    background-color: #242424;
    border-radius: 2px;
 }
@@ -691,6 +718,7 @@ body {
    position: relative;
    display: block;
    padding-left: 36px;
+   line-height: 22px;
 }
 
 /* Mark */
@@ -844,7 +872,7 @@ body {
 }
 
 .catalog-filter-group {
-   margin: 0;
+   margin-top: 40px;
    margin-bottom: 40px;
    padding: 0;
    border: none;
@@ -857,7 +885,7 @@ body {
 
 .product-card-image {
    width: 220px;
-   height: 230px;
+   height: 200px;
 }
 
 .inner-header-title {
@@ -868,9 +896,10 @@ body {
    text-transform: uppercase;
 }
 
-/* Breadcrumbs длинный горизонтальный блок с крошками внутри */
+/* Breadcrumbs */
 .breadcrumbs {
    display: flex;
+   flex-wrap: wrap;
    margin: 0;
    padding: 0;
    color: #242424;
@@ -878,25 +907,25 @@ body {
 }
 
 .breadcrumbs-link {
-   margin-right: 32px;
+   margin-right: 15px;
    color: inherit;
 }
 
 .breadcrumbs-item {
    position: relative;
-   margin-right: 32px;
+   margin-right: 15px;
    list-style-type: none;
 }
 
 .breadcrumbs-item::after {
    position: absolute;
-   top: 10px;
+   top: 7px;
    right: -4px;
    width: 8px;
    height: 8px;
-   background-color: #242424;
-   content: "";
-   transform: rotate(45deg);
+   background-color: #814B18;
+    content: "";
+    border-radius: 50%;
 }
 
 .breadcrumbs-item:last-child::after {
@@ -906,6 +935,8 @@ body {
 /* Catalog sorting container */
 .sorting-container {
    display: flex;
+   flex-wrap: wrap;
+   justify-content: flex-end;
    margin-bottom: 16px;
    padding: 16px;
    color: #000000;
@@ -952,7 +983,7 @@ body {
 
 .product-card-image-link {
    text-decoration: none;
-   background-color: f6f6f6;
+   background-color: #f6f6f6;
    grid-column: 1 / -1;
 }
 
@@ -968,16 +999,20 @@ body {
 }
 
 .product-card-title {
+   margin: 0;
+   font-size: 16px;
    font-weight: 700;
    color: #242424;
 }
 
 .product-card-price {
+   margin-bottom: 16px;
    font-size: 24px;
    line-height: 29px;
    font-weight: 700;
    color: #814B18;
    text-transform: uppercase;
+   letter-spacing: -2px;
 }
 
 /* Pagination */
@@ -989,6 +1024,7 @@ body {
 
 .pagination {
    display: flex;
+   flex-wrap: wrap;
    margin: 0;
    padding: 0;
    list-style-type: none;
@@ -1006,8 +1042,8 @@ body {
 .pagination-link {
    display: block;
    box-sizing: border-box;
-   width: 50px;
-   height: 44px;
+   min-width: 50px;
+   min-height: 44px;
    padding: 14px 20px;
    line-height: 16px;
    font-weight: 700;
@@ -1032,16 +1068,24 @@ body {
 .pagination-prev {
    background-image: url("../images/main/arrow-right.png");
    transform: rotate(180deg);
-   background-position: center;
    background-size: 16px 16px;
    background-repeat: no-repeat;
+   background-position: 17px center;
+   padding-left: 36px;
+   padding-right: 14px;
 }
 
 .pagination-next {
    background-image: url("../images/main/arrow-right.png");
-   background-position: center;
+   background-position: 17px center;
    background-size: 16px 16px;
    background-repeat: no-repeat;
+   padding-left: 36px;
+   padding-right: 14px;
+}
+
+.pagination-item {
+   margin-bottom: 5px;
 }
 
 .pagination-item:not(last-child) {
@@ -1051,6 +1095,7 @@ body {
 /* "Show more" button in pagination */
 .pagination-show-more { 
    margin-left: auto;
+   max-width: 170px;
 }
 
 .popover {
@@ -1066,6 +1111,12 @@ body {
    background-color: #FFFFFF;
    min-height: 186px;
    box-shadow: 0 18px 40px rgba(79, 70, 60, 0.16);
+   display: none;
+}
+
+/* Shopping Card popover */
+.popover-open {
+   display: block;
 }
 
 .popover-close-button {
@@ -1086,6 +1137,10 @@ body {
    background-size: 16px 16px;
 }
 
+.popover-cart {
+   width: 420px;
+}
+
 .popover-content {
    height: 100%;
 }
@@ -1097,6 +1152,41 @@ body {
    line-height: 35px;
    color: #000000;
    text-transform: uppercase;
+}
+
+.cart-item {
+   display: grid;
+   grid-template-columns: 284px 56px;
+}
+
+.cart-item + .cart-item {
+   margin-top: 24px;
+   padding-top: 24px;
+   border-top: 1px dashed #595959;
+}
+
+.cart-item-title {
+   margin-top: 0;
+   margin-bottom: 2px;
+   font-size: 20px;
+   line-height: 28px;
+   font-weight: 700;
+   color: #242424;
+   text-transform: uppercase;
+}
+
+.cart-item-price {
+   margin: 0;
+   font-family: "PT Sans", sans-serif;
+   font-size: 16px;
+   line-height: 24px;
+   font-weight: 700;
+   color: #AF7842;
+}
+
+.cart-item .button {
+   grid-row: 1 / 3;
+   grid-column: 2 / 4;
 }
 
 .cart-item-button {
@@ -1138,11 +1228,6 @@ body {
    margin-right: 130px;
 }
 
-/* .footer-contacts-logo {
-   display: block;
-   margin-bottom: 24px;
-} */
-
 .footer-contacts-address {
    font-style: normal;
    color: #FFFFFF;
@@ -1157,8 +1242,13 @@ body {
    margin-top: 0;
 }
 
+.newsletter {
+   max-width: 300px;
+}
+
 .newsletter-form {
    display: flex;
+   width: 200px;
 }
 
 .newsletter-email {
@@ -1207,9 +1297,129 @@ body {
    background-color: #000000;
    background-repeat: no-repeat;
    background-position: center;
-   background-size: 16px 16px;
+   background-size: 18px 18px;
+}
+
+.twitter {
+   background-image: url("../images/footer/twitter-pale.png");
+}
+
+.facebook {
+   background-image: url("../images/footer/facebook-pale.png");
+}
+
+.instagram {
+   background-image: url("../images/footer/instagram-pale.png");
 }
 
 .footer-social-item:nth-child(3n) {
    margin-right: 0;
+}
+
+.about-text {
+   display: block;
+   font-size: 14px;
+   line-height: 20px;
+   font-weight: 700;
+   color: #FFFFFF;
+   margin-top: 0;
+}
+
+.htmlacademy-link {
+   font-size: 14px;
+   line-height: 20px;
+   font-weight: 700;
+   color: #AF7842;
+   margin-top: 0;
+}
+
+.modal-container {
+   position: fixed;
+   top: 0;
+   left: 0;
+   display: flex;
+   width: 100%;
+   height: 100%;
+   background-color: rgba(0, 0, 0, 0.8);
+}
+
+.modal-container-close {
+   display: none;
+}
+
+.modal {
+   position: relative;
+   margin: auto;
+   padding: 40px;
+   background-color: #FFFFFF;
+}
+
+.modal-auth {
+   width: 360px;
+}
+
+.modal-close-button {
+   position: absolute;
+   padding: 0;
+   top: 0;
+   right: 0;
+   width: 56px;
+   height: 44px;
+   background-color: #FFFFFF;
+   border: none;
+   background-image: url('../images/main/cross.png');
+   background-size: 16px 16px;
+   background-repeat: no-repeat;
+   background-position: center;
+   cursor: pointer;
+}
+
+.modal-title {
+   margin: 0;
+   margin-bottom: 24px;
+   font-family: "PT Sans Narrow", sans-serif;
+   font-size: 32px;
+   line-height: 35px;
+   font-weight: 700;
+   color: #000000;
+   text-transform: uppercase;
+}
+
+.auth-form .field-group {
+   margin: 0;
+   margin-bottom: 16px;
+}
+
+.auth-form-user-options {
+   display: flex;
+   justify-content: space-between;
+   font-weight: 400;
+}
+
+.auth-form-user-options .control-label {
+   font-weight: 400;
+}
+
+.auth-form .field {
+   width: 328px;
+}
+
+.auth-form-recovery {
+   line-height: 22px;
+   color: #000000;
+}
+
+.auth-form-button {
+   width: 360px;
+   margin-bottom: 16px;
+}
+
+.auth-form .button + .button {
+   margin: 0;
+}
+
+.auth-form-register {
+   width: 360px;
+   color: #000000;
+   background-color: #FFFFFF;
 }
